--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
  <img src="images/logo.jpg">
 <br>
- <h2>Mail: <a href="mailto:info@eye-echo.nl">info@eye-echo.nl</a> <br> Whatsapp: <a href="https://wa.me/0031638283240">+31 6 12345678</a></h2>
+ <h2>Mail: <a href="mailto:info@eye-echo.nl">info@eye-echo.nl</a> <br> Whatsapp: <a href="https://wa.me/31623489764">+31 (0)6 23489764</a></h2>
 
 </div>
 </body>
