--- a/ns/index.html
+++ b/ns/index.html
@@ -26,8 +26,8 @@ https://templatemo.com/tm-587-tiya-golf-club
         <main>
             
             <nav class="navbar navbar-expand-lg">                
-                <div class="container">
-                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <div class="container is-sticky is-sticky">
+                    <a class="navbar-brand d-flex align-items-center" href="#home">
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
                         <span class="navbar-brand-text">
                             Eye Echo
@@ -220,6 +220,7 @@ https://templatemo.com/tm-587-tiya-golf-club
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
-
+        <script src="js/modernizr.js"></script>
+        <script src="js/custom.js"></script>
     </body>
 </html>
