--- a/ns/index.html
+++ b/ns/index.html
@@ -16,7 +16,10 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
         
         <link href="css/styles.css" rel="stylesheet">
-        <script src="scripts.js" defer></script>
+        <script src="js/scripts.js" defer></script>
+        <script src="js/jquery.min.js" defer></script>
+        <script src="js/bootstrap.bundle.min.js" defer></script>
+        <script src="js/jquery.sticky.js" defer></script>
 <!--
 TemplateMo 587 Tiya Golf Club
 https://templatemo.com/tm-587-tiya-golf-club
@@ -27,7 +30,7 @@ https://templatemo.com/tm-587-tiya-golf-club
             
             <nav class="navbar navbar-expand-lg">                
                 <div class="container is-sticky is-sticky">
-                    <a class="navbar-brand d-flex align-items-center" href="#home">
+                    <a class="navbar-brand d-flex align-items-center nav-link" href="#home">
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
                         <span class="navbar-brand-text">
                             Eye Echo
@@ -66,7 +69,7 @@ https://templatemo.com/tm-587-tiya-golf-club
             <section data-Home class="hero-section d-flex justify-content-center align-items-center" id="home">
                 <div class="section-overlay"></div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fba72a" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d3b158" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
 
                 <div class="container"><div class="row">
                     <div class="col-md-6 col-12 mb-5 mb-lg-0">
@@ -119,7 +122,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         </div>
 
                         <div class="col-lg-4 col-12 mb-3 mb-lg-0">
-                            <h4 class="mb-4 pb-lg-2">Korte Echo</h4>
+                            <h4 class="mb-4 pb-lg-2">Kindje kijken / moment-echo / jongen of meisje / geslachtsbepaling / controle ligging spiraal</h4>
 
                             <div>
                                 <div class="member-block">
@@ -129,9 +132,11 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 </div>
                             </div>
                             <br>
+                            <p>Gedurende de hele zwangerschap ben je welkom voor kindje kijken / een moment-echo.
+                                Vanaf ongeveer 6 weken is een kloppend hartje al zichtbaar. Voor het beste beeld kijken we tot 10 weken het liefst met een inwendige echo.
+                                Rond 16 weken is het geslacht met vrij grote zekerheid te zien (99.9%).</p>
                             <ul><li>Invulling naar uw wens</li>
                                 <li>Mogelijk gedurende de gehele zwangerschap. </li>
-                                <li>Onder 10 weken kijken we inwendig. </li>
                                 <li>Geslachtsbepaling vanaf 16 weken.</li>
                                 <li>Geprinte foto's mee na afloop.</li>
                                 <li>Ook controle ligging spiraal mogelijk.</li> 
@@ -139,7 +144,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 <p>€ 40,-</p>
                         </div>
                         <div class="col-lg-4 col-12">
-                            <h4 class="mb-4 pb-lg-2">De 16 weken echo</h4> 
+                            <h4 class="mb-4 pb-lg-2">De uitgebreide 16-weken echo</h4> 
 
                             <div><div class="member-block">
                                 <div class="member-block-image-wrap">
@@ -147,13 +152,21 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 </div>
                             </div></div>
                             <br>
+                            <p>Tijdens deze echo nemen we meer tijd om je kindje zo mooi mogelijk in beeld te brengen. We zoeken de mooiste beelden van het snoetje, handjes en voetjes.
+                                Het kindje is nog tot 16 weken volledig in beeld te krijgen.
+                                Ondertussen kunnen we uitleg geven over de ontwikkelingen en zo veel mogelijk vragen beantwoorden.
+                                Indien gewenst is het geslacht nu zichtbaar.
+                                We doen ons uiterste best voor een mooie echo, maar zijn afhankelijk van de ligging van je kindje.</p>
                             <ul>
                                 <li>Uitgebreide blik op de baby.</li>
                                 <li>Beelden met uitleg over de ontwikkeling van je kindje.</li>
-                                <li>Geprinte foto's mee na afloop.</li>
                             </ul>
-                            <p>consult duurt ongeveer 20 minuten<br>€ 60,-</p>
+                            <p>consult duurt ongeveer 20 minuten</p><p>€ 60,-</p>
                         </div>
+                        <br><hr style="margin: 20px 0;"><br><br>
+                        <p>We geven geprinte foto's mee na afloop.
+                            De echo wordt uitgevoerd door een gespecialiseerd en ervaren echoscopist.
+                            Eye-echo maakt niet-medische echoś.</p>
                     </div>
                 </div>
 
@@ -215,12 +228,5 @@ https://templatemo.com/tm-587-tiya-golf-club
                 </div></div>
             </div>
         </footer>
-
-        <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.bundle.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/modernizr.js"></script>
-        <script src="js/custom.js"></script>
     </body>
 </html>
