--- a/ns/index.html
+++ b/ns/index.html
@@ -34,13 +34,13 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
                         <span class="navbar-brand-text">
                             Eye Echo
-                            <small>Kijken naar je kindje</small>
+                            <small>Oog op de baby</small>
                         </span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
                         <!-- <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Afspraak maken</a> -->
-                        <a class="btn custom-btn custom-border-btn" href="#contact" role="button" aria-controls="offcanvasExample">Afspraak maken</a>
+                        <a class="btn custom-btn custom-border-btn nav-link" href="#contact" role="button" aria-controls="offcanvasExample">Afspraak maken</a>
 
 
                     </div>
@@ -53,13 +53,13 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <ul class="navbar-nav ms-lg-auto">
                             <li class="nav-item"><a data-Home class="nav-link" href="#home">Home</a></li>
                             <li class="nav-item"><a data-Over class="nav-link" href="#over">Over</a></li>
-                            <li class="nav-item"><a data-Soorten class="nav-link" href="#soorten">Soorten</a></li>
+                            <li class="nav-item"><a data-Echo class="nav-link" href="#echo">Echo's</a></li>
                             <li class="nav-item"><a data-Contact class="nav-link" href="#contact">Contact</a></li>
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
                             <!-- <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Afspraak maken</a> -->
-                            <a class="btn custom-btn custom-border-btn" href="#contact" role="button">Afspraak maken</a>
+                            <a class="btn custom-btn custom-border-btn nav-link" href="#contact" role="button">Afspraak maken</a>
 
                         </div>
                     </div>
@@ -74,7 +74,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                 <div class="container"><div class="row">
                     <div class="col-md-6 col-12 mb-5 mb-lg-0">
                         <h1 class="text-white">Welkom bij Eye Echo</h2>
-                        <h2 class="cd-headline rotate-1 text-white mb-4 pb-2">Kijken naar je kindje</h2>
+                        <h2 class="cd-headline rotate-1 text-white mb-4 pb-2">Oog op de baby</h2>
                     </div>
                 </div></div>
 
@@ -111,14 +111,14 @@ https://templatemo.com/tm-587-tiya-golf-club
                 </div>
             </section>
 
-            <section class="section-bg" id="soorten">
+            <section class="section-bg" id="echo">
                 <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#fffaf0" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
 
                 <div class="container">
                     <div class="row justify-content-around">
 
                         <div class="col-lg-12 col-12 text-center mx-auto mb-lg-5 mb-4">
-                            <h2>Soorten echo's</h2>
+                            <h2>Echo's</h2>
                         </div>
 
                         <div class="col-lg-4 col-12 mb-3 mb-lg-0">
@@ -170,6 +170,39 @@ https://templatemo.com/tm-587-tiya-golf-club
                     </div>
                 </div>
 
+                <!-- <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#fffaf0" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg> -->
+            </section>
+
+            <section class="section-bg-image not-in-header">
+                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#f1ecc8" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="#f1ecc8" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="#f1ecc8" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="#f1ecc8" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="#f1ecc8" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
+                <div class="section-bg-image-BACKGROUNDSELF"></div>
+                <div class="container">
+                    <div class="row  align-items-center">
+
+                        <div class="col-lg-6 col-12">
+                            <div class="section-bg-image-block">
+                                <h2 class="mb-lg-3">Wie maakt de echo?</h2>
+
+                                <p> De echoscopist, Annemiek Smulders, maakt al sinds de jaren 90 medische echo's. Ze is bevoegd en bekwaam voor alle
+                                    echo's van de prenetale screening. Voorheen werkte ze jarenlang als verloskundige in Amsterdam en omstreken.
+                                    
+                                    Annemiek vindt het belangrijk dat iedereen zonder medische blik naar hun kind kunnen kijken, om er 
+                                    op die manier kennis mee te maken. Daarom is ze Eye Echo begonnen!
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 col-12">
+                            <div class="member-block">
+                                <div class="member-block-image-wrap">
+                                    <img src="images/Annemiek.jpg" class="member-block-image img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
                 <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#fffaf0" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
             </section>
 
@@ -178,7 +211,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                         <h2 class="mb-4 pb-2 mt-3">Contact</h2>
 
-                        <p>Voor een afspraak en / of vragen kun je contact opnemen via Whatsapp, email, of door een telefoontje te doen. Wij prefereren contact via Whatsapp.</p>
+                        <p>Voor een afspraak en / of vragen kun je contact opnemen via Whatsapp of de mail. Wij prefereren contact via Whatsapp.</p>
 
                         <div class="col-md-4 col-12 pb-4 mw-30">
                             <a href="https://wa.me/31623489764"><img src="images/WhatsAppButtonGreenLarge.svg"></a>
@@ -211,7 +244,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
                                 <span class="navbar-brand-text">
                                     Eye Echo
-                                    <small>Kijken naar je kindje</small>
+                                    <small>Oog op de baby</small>
                                 </span>
                             </a>
                         </div>
