--- a/ns/index.html
+++ b/ns/index.html
@@ -34,7 +34,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
                         <span class="navbar-brand-text">
                             Eye Echo
-                            <small>Oog op de baby</small>
+                            <!-- <small>Oog op de baby</small> -->
                         </span>
                     </a>
 
@@ -74,7 +74,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                 <div class="container"><div class="row">
                     <div class="col-md-6 col-12 mb-5 mb-lg-0">
                         <h1 class="text-white">Welkom bij Eye Echo</h2>
-                        <h2 class="cd-headline rotate-1 text-white mb-4 pb-2">Oog op de baby</h2>
+                        <h2 class="cd-headline rotate-1 text-white mb-4 pb-2">Met het oog op de baby</h2>
                     </div>
                 </div></div>
 
@@ -244,7 +244,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
                                 <span class="navbar-brand-text">
                                     Eye Echo
-                                    <small>Oog op de baby</small>
+                                    <!-- <small>Oog op de baby</small> -->
                                 </span>
                             </a>
                         </div>
