--- a/ns/index.html
+++ b/ns/index.html
@@ -20,6 +20,19 @@
         <script src="js/jquery.min.js" defer></script>
         <script src="js/bootstrap.bundle.min.js" defer></script>
         <script src="js/jquery.sticky.js" defer></script>
+
+        <!-- Icons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="./images/icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon-16x16.png">
+        <link rel="manifest" href="./images/icons/site.webmanifest">
+        <link rel="mask-icon" href="./images/icons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="./images/icons/favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="Eye Echo">
+        <meta name="application-name" content="Eye Echo">
+        <meta name="msapplication-TileColor" content="#2b5797">
+        <meta name="msapplication-config" content="./images/icons/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
 <!--
 TemplateMo 587 Tiya Golf Club
 https://templatemo.com/tm-587-tiya-golf-club
@@ -244,7 +257,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                 <div class="container"><div class="row justify-content-center">
 
                         <div class="col-md-4 col-12 mb-3 mb-lg-0">
-                            <a class="navbar-brand d-flex" href="index.html">
+                            <a class="navbar-brand d-flex align-items-center" href="index.html">
                                 <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
                                 <span class="navbar-brand-text">
                                     Eye Echo
