--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-587-tiya-golf-club
             <nav class="navbar navbar-expand-lg">                
                 <div class="container is-sticky is-sticky">
                     <a class="navbar-brand d-flex align-items-center nav-link" href="#home">
-                        <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
+                        <img src="images/logo48.png" class="navbar-brand-image img-fluid" alt="Eye Echo">
                         <span class="navbar-brand-text">
                             Eye Echo
                             <!-- <small>Oog op de baby</small> -->
@@ -261,7 +261,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                         <div class="col-md-4 col-12 mb-3 mb-lg-0">
                             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                                <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
+                                <img src="images/logo48.png" class="navbar-brand-image img-fluid" alt="">
                                 <span class="navbar-brand-text">
                                     Eye Echo
                                     <!-- <small>Oog op de baby</small> -->
