--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="Eye Echo is dé plek op Walcheren om een echo naar eigen wens in te vullen. Je kunt er terecht voor alle soorten echo's in de zwangerschap!">
+        <meta name="keywords" content="pretecho, echo, eigen, wens, Zeeland, Walcheren, Middelburg, baby, moment, ultrasound, scan, geslachtsbepaling, eye">
+        <meta name="author" content="Feike Scholtens">
 
-        <title>Eye Echo</title>
+        <title>Eye Echo | Met het oog op je baby</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -52,8 +53,8 @@ https://templatemo.com/tm-587-tiya-golf-club
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <!-- <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Afspraak maken</a> -->
-                        <a class="btn custom-btn custom-border-btn nav-link" href="#contact" role="button" aria-controls="offcanvasExample">Afspraak maken</a>
+                        <!-- <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button">Afspraak maken</a> -->
+                        <a class="btn custom-btn custom-border-btn nav-link" href="#contact" role="button">Afspraak maken</a>
 
 
                     </div>
