--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         
                             <div class="member-block">
                                 <div class="member-block-image-wrap">
-                                    <img src="images/pregnantWoman.jpg" class="member-block-image img-fluid" alt="">
+                                    <img src="images/voet.jpg" class="member-block-image img-fluid" alt="">
                                 </div>
                             </div>
                         </div>
