--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ https://templatemo.com/tm-587-tiya-golf-club
                             <p>We nemen de tijd, maken mooie beelden en geven uitleg. Uiteraard krijg je foto's mee. Volwassenen en / of kinderen zijn welkom.</p>
                         </div>
 
-                        <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
+                        <div class="col-lg-6 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
                             <div class="member-block">
                                 <div class="member-block-image-wrap">
-                                    <img src="images/pregnantWoman.jpg" class="member-block-image img-fluid" alt="">
+                                    <img src="images/CRL Eye echo 2 edited.jpg" class="member-block-image img-fluid" alt="">
                                 </div>
                             </div>
                         </div>
@@ -218,6 +218,32 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </div>
                         </div>
 
+                    </div>
+                </div>
+
+                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgb(241, 236, 200)" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgb(241, 236, 200)" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="rgb(241, 236, 200)" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="rgb(241, 236, 200)" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="rgb(241, 236, 200)" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
+            </section>
+
+            <section class="section-bg not-in-header experiences-section">
+                <!-- <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="#fffaf0" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="#fffaf0" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="#fffaf0" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg> -->
+
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-12 col-12 text-center mx-auto mb-lg-5 mb-4">
+                            <h2>Ervaringen</h2>
+                        </div>
+
+                        <div class="col-lg-5 col-12 mb-3 mb-lg-0" id="float_items">
+
+                                <p>"Fijne echo gehad bij Annemiek! Ze neemt de tijd om uit te leggen wat er te zien is 
+                                    en de geprinte echo's zijn een groter formaat. Ook is het lekker warm in de ruimte 
+                                    (niet onbelangrijk). Aanrader!"
+                                </p>
+                                
+                                <p>Roos M.</p>
+                        </div>
+                        
                     </div>
                 </div>
 
