--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 TemplateMo 587 Tiya Golf Club
 https://templatemo.com/tm-587-tiya-golf-club
 -->
+<!-- Pixel Code for https://app.tinyanalytics.io/ -->
+<script defer src="https://app.tinyanalytics.io/pixel/KtgYqfig87uEusFL"></script>
+<!-- END Pixel Code -->
     </head>
     <body>
         <main>
