--- a/index.html
+++ b/index.html
@@ -218,13 +218,17 @@ https://templatemo.com/tm-587-tiya-golf-club
                         </div>
 
                         <div class="col-lg-5 col-12 mb-3 mb-lg-0" id="float_items">
-
-                                <p>"Fijne echo gehad bij Annemiek! Ze neemt de tijd om uit te leggen wat er te zien is 
-                                    en de geprinte echo's zijn een groter formaat. Ook is het lekker warm in de ruimte 
-                                    (niet onbelangrijk). Aanrader!"
-                                </p>
-                                
-                                <p>Roos M.</p>
+                            <p>"Fijne echo gehad bij Annemiek! Ze neemt de tijd om uit te leggen wat er te zien is 
+                                en de geprinte echo's zijn een groter formaat. Ook is het lekker warm in de ruimte 
+                                (niet onbelangrijk). Aanrader!"</p>
+                            <p>~ Roos M.</p>
+                        </div>
+                        <div class="col-lg-5 col-12 mb-3 mb-lg-0" id="float_items">
+                            <p>"Annemiek neemt persoonlijk de tijd voor je. Ze luistert naar je wensen en 
+                                vragen en verteld over datgeen wat je ziet. Het gaat op een rustig tempo waardoor
+                                 je niet opgejaagd wordt en het geeft een fijne sfeer. Zeer aan te raden om hier
+                                  je echo's uit te laten voeren.</p>
+                            <p>~ Niels V.</p>
                         </div>
                         
                     </div>
