forgot double quote

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                             <p>"Annemiek neemt persoonlijk de tijd voor je. Ze luistert naar je wensen en 
                                 vragen en verteld over datgeen wat je ziet. Het gaat op een rustig tempo waardoor
                                  je niet opgejaagd wordt en het geeft een fijne sfeer. Zeer aan te raden om hier
-                                  je echo's uit te laten voeren.</p>
+                                  je echo's uit te laten voeren."</p>
                             <p>~ Niels V.</p>
                         </div>
                         
