--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                 <p>Gedurende de hele zwangerschap ben je welkom. 
                                     Vanaf ongeveer 6 weken is een kloppend hartje al zichtbaar!<br>
-                                    Echter, rond 16 weken zwangerschap is het kindje het best te zien, 
-                                    en is het geslacht met vrij grote zekerheid vast te stellen.
+                                    Echter, rond 16 weken zwangerschap is het kindje het best te zien.
                                     Tijdens deze 16-weken echo zoeken we de mooiste beelden van het snoetje, handjes en voetjes.
                                     Ondertussen kunnen we uitleg geven over de ontwikkelingen en zo veel mogelijk jullie vragen beantwoorden.
                                     </p>
@@ -164,10 +163,13 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 </div>
                             </div>
                         </div>
-                        <br><hr style="margin: 20px 0;"><br><br>
+                        <br><br>
                         <p>We doen ons uiterste best voor een mooie echo, maar zijn afhankelijk van de ligging van je kindje.
                             De echo wordt uitgevoerd door een gespecialiseerd en ervaren echoscopist.</p>
-                            <br><p>Wil je alleen het geslacht weten? <br>€ 40,-</p>
+                            
+                            <hr style="margin: 20px 0;"><br>
+                            <br><p>Wil je alleen het geslacht weten? <br><br> Dat kan meestal vanaf 13-14 weken. <br> Indien het nog niet mogelijk is (door bijvoorbeeld de ligging van het kindje),
+                                kan je op een later moment kosteloos terugkomen.<br>€ 40,-</p>
                     </div>
                 </div>
 
