--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 <p>Uitgebreide 16-weken echo: <br> € 75,-</p>
                                 
                         </div>
-                        <div class="col-lg-5 col-12">
+                        <div class="col-lg-5 col-12" style="margin: 15px;">
                         
                             <div class="member-block">
                                 <div class="member-block-image-wrap">
-                                    <img src="images/voet.jpg" class="member-block-image img-fluid" alt="">
+                                    <img src="images/people_with_images-min.jpg" class="member-block-image img-fluid" alt="">
                                 </div>
                             </div>
                         </div>
