fix horizontal scrolling small screens

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 <p><i>Kosten van de echo: € 50,-</i></p>
                                 
                         </div>
-                        <div class="col-lg-5 col-12" style="margin: 15px;">
+                        <div class="col-lg-5 col-12 mb-3 mb-lg-0">
                         
                             <div class="member-block">
                                 <div class="member-block-image-wrap">
